# check_pam

./: CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg
check_pam/: __init__.py  __main__.py
pamtester/: __init__.py
tests/: test_endtoend.py
