[metadata]
author = Christopher Peterson
author_email = contact@cspeterson.net
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = check_pam is an Icinga2/Nagios plugin which uses `pamtester` to test PAM

long_description = file: README.md
long_description_content_type = text/markdown
name = check_pam
project_urls =
    Documentation = 
    Bug Tracker = 
    Source = 
url = 
version = attr: check_pam.__version__

[options]
install_requires =
	nagiosplugin>=1.3.3,<2.0.0
packages = find:
package_dir =
	=./
python_requires = >=3.6
scripts =
	bin/check_pam

[options.packages.find]
where = ./
exclude = tests*
