[metadata]
author = Christopher Peterson
author_email = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = check_pam is an Icinga2/Nagios plugin which uses `pamtester` to test PAM operations

long_description = file: README.md
long_description_content_type = text/markdown
name = check_pam
project_urls =
    Documentation = https://github.com/theias/check_pam
    Bug Tracker = https://github.com/theias/check_pam/issues
    Source = https://github.com/theias/check_pam
url = https://github.com/theias/check_pam
version = attr: check_pam.__version__

[options]
install_requires =
	nagiosplugin>=1.3.3,<2.0.0
packages = find:
package_dir =
	=./
python_requires = >=3.6
scripts =
	bin/check_pam

[options.packages.find]
where = ./
exclude = tests*
